classDiagram

    %% ──────────────────────────────
    %% EasyLog
    %% ──────────────────────────────
    namespace EasyLog {
        class LogEntry {
            +DateTime Timestamp
            +string BackupName
            +string SourcePath
            +string TargetPath
            +long FileSize
            +long TransferTime
        }

        class Logger {
            -readonly string _logDirectory
            -readonly string _format
            +void Logger(string format)
            +void Write(LogEntry entry)
            -void WriteJson(LogEntry entry)
            -void WriteXml(LogEntry entry)
        }
    }

    %% ──────────────────────────────
    %% EasySave.Core
    %% ──────────────────────────────
    namespace EasySave.Core {
        class BackupJob {
            +int Id
            +string Name
            +string SourcePath
            +string TargetPath
            +BackupType Type
        }

        class BackupState {
            +string Name
            +DateTime LastActionTime
            +string Status
            +int TotalFiles
            +int RemainingFiles
            +long TotalSize
            +long RemainingSize
            +string CurrentSourceFile
            +string CurrentTargetFile
        }

        class BackupType {
            <<enumeration>>
            Full
            Differential
        }
    }

    %% ──────────────────────────────
    %% EasySave.Services
    %% ──────────────────────────────
    namespace EasySave.Services {
        class IBackupService {
            <<interface>>
            +void RunBackup(BackupJob job)
        }

        class IConfigRepository {
            <<interface>>
            +List~BackupJob~ Load()
            +void Save(List~BackupJob~ jobs)
        }

        class IFileService {
            <<interface>>
            +IEnumerable~string~ GetAllFiles(string directory)
            +void CopyFile(string source, string target)
        }

        class IStateRepository {
            <<interface>>
            +void Save(List~BackupState~ states)
        }

        class BackupService {
            -readonly IFileService _fileService
            -readonly Logger _logger
            -readonly IStateRepository _stateRepo
            +void BackupService(IFileService fileService, Logger logger, IStateRepository stateRepo)
            +void RunBackup(BackupJob job)
            -string ToUNC(string path)
        }
    }

    %% ──────────────────────────────
    %% EasySave.Infrastructure
    %% ──────────────────────────────
    namespace EasySave.Infrastructure {
        class FileService {
            +IEnumerable~string~ GetAllFiles(string directory)
            +void CopyFile(string source, string target)
        }

        class JsonService {
            +void Write~T~(string path, object data)
            +T Read~T~(string path)
        }

        class StateRepository {
            -readonly JsonService _jsonService
            -const string StatePath
            +void Save(List~BackupState~ states)
        }

        class ConfigRepository {
            -const string ConfigPath
            +List~BackupJob~ Load()
            +void Save(List~BackupJob~ jobs)
        }
    }

    %% ──────────────────────────────
    %% EasySave.ConsoleApp
    %% ──────────────────────────────
    namespace EasySave.ConsoleApp {
        class Program {
            +static void Main(string[] args)
        }

        class JobViewModel {
            -readonly IConfigRepository _configRepo
            -readonly IBackupService _backupService
            +List~BackupJob~ Jobs
            +string Message
            +bool HasError
            +JobViewModel(IConfigRepository configRepo, IBackupService backupService)
            +void Refresh()
            +void CreateJob(string name, string source, string target, BackupType type)
            +void RunJobs(IEnumerable~int~ ids)
            +void DeleteJob(int id)
            -void SetSuccess(string messageKey)
            -void SetError(string messageKey)
            -void ClearMessage()
        }

        class JobView {
            -readonly JobViewModel _vm
            -readonly TranslationService _t
            +JobView(JobViewModel vm, TranslationService t)
            +void Run()
            -void ShowCreate()
            -void ShowList()
            -void ShowRun()
            -void ShowDelete()
            -void PrintMessage()
            -static IEnumerable~int~ ParseIds(string input)
        }

        class TranslationService {
            -readonly Dictionary~string,string~ _translations
            +TranslationService(string lang)
            +string T(string key)
        }
    }

    %% ──────────────────────────────
    %% Relations
    %% ──────────────────────────────

    %% EasyLog internals
    Logger ..> LogEntry : creates

    %% BackupJob uses BackupType enum
    BackupJob --> BackupType

    %% Services: BackupService implements IBackupService and depends on abstractions
    BackupService ..|> IBackupService
    BackupService --> IFileService
    BackupService --> IStateRepository
    BackupService --> Logger
    BackupService ..> BackupState : creates

    %% Infrastructure implements Services interfaces
    FileService ..|> IFileService
    StateRepository ..|> IStateRepository
    ConfigRepository ..|> IConfigRepository

    %% Infrastructure internals
    StateRepository --> JsonService
    ConfigRepository --> JsonService

    %% Program.cs composition root
    Program ..> ConfigRepository
    Program ..> FileService
    Program ..> Logger
    Program ..> StateRepository
    Program ..> BackupService
    Program ..> TranslationService
    Program ..> JobViewModel
    Program ..> JobView

    %% JobView dependencies (injected via constructor)
    JobView --> JobViewModel
    JobView --> TranslationService

    %% JobViewModel depends on Service interfaces
    JobViewModel --> IConfigRepository
    JobViewModel --> IBackupService
    JobViewModel ..> BackupJob : exposes List